Shifting to working directory before executing command